# jira_python_mcp

./: .gitignore  Dockerfile  build-docker.sh  build.sh  daemon_mcp_config.json  daemon_readme.md  docker-compose.yml  docker-vscode-settings-example.json  docker_fixed_mcp_config.json  fixed_cline_mcp_settings.json  jira_mcp.env.example  mcp_direct_client.py  mcp_fix_documentation.md  pyproject.toml  readme.md  simple_jira_test.py  start-jira-mcp-daemon.sh  stop-jira-mcp-daemon.sh  test_docker_mcp.py  test_jira_mcp.py  test_mcp_client.py  using_in_new_project.md  using_jira_mcp.md
jira_python_mcp/: __init__.py  server.py
jira_python_mcp/advanced/: __init__.py  client.py
jira_python_mcp/base/: __init__.py  client.py
