[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira_python_mcp"
version = "0.1.0"
description = "Jira MCP server for exposing Jira functionality through the Model Context Protocol"
authors = [
    {name = "Your Name"}
]
readme = "readme.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jira>=3.5.0",
    "python-dotenv>=1.0.0",
    "modelcontextprotocol>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
jira-mcp-server = "jira_python_mcp.server:main"

[tool.setuptools]
packages = ["jira_python_mcp"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
